# Parliament

./: .gitignore  .travis.sh  .travis.yml  Makefile  README.md  _tags  parliament.install  parliament.opam
MemberOfParliament/: .gitignore  .travis.yml  Cargo.toml  README.md  default-conf.ini
MemberOfParliament/protos/: user_cluster.proto
MemberOfParliament/src/: config.rs  main.rs  util.rs
MemberOfParliament/src/communication/: client.rs  mod.rs  request.rs  response.rs  server.rs
MemberOfParliament/src/executor/: docker.rs  executor.rs  mod.rs  shell.rs
MemberOfParliament/src/executor/communication/: mod.rs  request.rs  server.rs
MemberOfParliament/src/protos/: mod.rs  user_cluster.rs
MemberOfParliament/tests/: command_line.rs  generate_proto.rs
Parliament/: parliament.install
Parliament/lib/: Door.ml  datapack.mli  house.mli  util.ml
Parliament/spec/protobuf/user-cluster/: Worker.proto  connection.proto  data.proto
Parliament/test/: dune
ParliamentExample/: README.md
ParliamentExample/sleep/parallel/: Dockerfile  Makefile  docker.sh  run.sh
ParliamentExample/sleep/parallel/src/: house.ml
ParliamentExample/sort/parallel/: Dockerfile  docker.sh  house.install  house.opam
ParliamentExample/sort/parallel/src/: dune  house.ml
ParliamentExample/sort/sequential/: house.opam
ParliamentExample/sort/sequential/src/: house.ml
ParliamentExample/word_count/parallel/: Dockerfile  docker.sh  run_docker.sh  setup.sh
ParliamentExample/word_count/parallel/src/: house.ml
ParliamentExample/word_count/sequential-parallel/: dune-project
ParliamentExample/word_count/sequential-parallel/src/: dune  house.ml
ParliamentExample/word_count/sequential/src/: house.ml
PrimeMinister/: .gitignore  Cargo.toml  README.md
PrimeMinister/consensus/: Cargo.toml
PrimeMinister/consensus/src/: main.rs  state.rs  util.rs
PrimeMinister/consensus/src/consensus/: client.rs  mod.rs  request.rs  response.rs  server.rs
PrimeMinister/consensus/src/master/: command.rs  consensus.rs  mod.rs  user_server.rs  worker_server.rs
PrimeMinister/minister/: Cargo.toml
PrimeMinister/minister/src/: cluster.rs  config.rs  main.rs  model.rs  util.rs
PrimeMinister/minister/src/users/: handlers.rs  mod.rs  server.rs
PrimeMinister/minister/src/workers/: client.rs  handlers.rs  mod.rs  server.rs
PrimeMinister/shared/: Cargo.toml
PrimeMinister/shared/protos/: consensus.proto  intra_cluster.proto  user_cluster.proto
PrimeMinister/shared/src/: lib.rs  util.rs
PrimeMinister/shared/src/protos/: consensus.rs  intra_cluster.rs  mod.rs  user_cluster.rs
PrimeMinister/shared/tests/: generate_proto.rs
lib/: Connection.ml  Door.ml  Worker.ml  connection.mli  context.ml  context.mli  core.ml  datapack.ml  datapack.mli  dune  house.ml  house.mli  test_module.ml  util.ml  util.mli  workload.ml
lib/Core/: datapack.ml  dune
lib/Core/Protobuf/: connection_pb.ml  connection_pb.mli  connection_types.ml  connection_types.mli  create_connection_pb.ml  create_connection_pb.mli  create_connection_types.ml  create_connection_types.mli  data_pb.ml  data_pb.mli  data_types.ml  data_types.mli  dune  job_pb.ml  job_pb.mli  job_types.ml  job_types.mli  status_pb.ml  status_pb.mli  status_types.ml  status_types.mli
proto/: connection.proto  create_connection.proto  job.proto  status.proto
scripts/: generate_proto.sh
spec/: communication.md
spec/build_scripts/: worker_setup.sh
spec/protobuf/intra-cluster/: add_worker.proto  all.proto  heartbeat.proto
spec/protobuf/user-cluster/: Worker.proto  connection.proto  create_connection.proto  data.proto  job.proto  status.proto
spec/protobuf/user-cluster/output/: Worker_pb.ml  Worker_pb.mli  Worker_types.ml  Worker_types.mli
src/: Parliament.ml
src/main/: Parliament.ml  Parliament.mllib  Parliament.odocl
src/main/Core/Protobuf/: placeholder
src/main/Worker/: Parliament_worker.ml
src/proto/: connection.proto  data.proto  job.proto
src/tests/: ParliamentTest.ml
test/: connection_test.ml  dune  mock.ml  workload_test.ml
