opam-version: "2"
version: "1.0"
maintainer: "david.adeboye@outlook.com"
authors: ["David Adeboye"]
homepage: "https://github.com/adeboyed/Parliament"
bug-reports: "https://github.com/adeboyed/Parliament/issues"
dev-repo: "https://github.com/adeboyed/Parliament.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only" "parliament" "--root" "." "-j" jobs "@install"]
]