opam-version: "2"
version: "1.0"
maintainer: "[REACTED]"
authors: ["[REACTED]"]
homepage: "https://github.com/[REACTED]/Parliament"
bug-reports: "https://github.com/[REACTED]/Parliament/issues"
dev-repo: "https://github.com/[REACTED]/Parliament.git"
license: "MIT"
depends: [
  "jbuilder" {build}
  "core"
  "ocaml-protoc"
]
build: [
  ["jbuilder" "build" "--only" "parliament" "--root" "." "-j" jobs "@install"]
]